deployment/k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: football-api-staging-svc
  namespace: staging
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: football-api-staging
    env: staging
