deployment/k8s/staging/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: football-api-staging-ingress
  namespace: staging
  annotations:
    kubernetes.io/tls-acme: "true" # enable certificates
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/client-body-buffer-size: 20M
    nginx.ingress.kubernetes.io/proxy-body-size: 20M
spec:
  tls: # specify domains to fetch certificates for
  - hosts:
    - football.api.staging.sportal365.com
    secretName: football-api-staging-tls
  rules:
  - host: football.api.staging.sportal365.com
    http:
      paths:
      - path: /
        backend:
          serviceName: football-api-staging-svc
          servicePort: 80
